@@ -198,6 +198,7 @@ void Bitmap::GetMaxPoint(int* width, int* height)
 
 void Bitmap::Draw()
 {
+  MathCell::SetPrinting(true);
   MathCell* tmp = m_tree;
   wxMemoryDC dc;
   dc.SelectObject(m_bmp);
@@ -257,6 +258,7 @@ void Bitmap::Draw()
   m_ppi = dc.GetPPI();
   m_ppi.x *= m_scale;
   m_ppi.y *= m_scale;
+  MathCell::SetPrinting(false);
 }
 
 wxSize Bitmap::ToFile(wxString file)
