@@ -23,6 +23,7 @@ Current:
   * Drag-and-drop now handles image cells
   * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
     load .wxm files like it would load .mac files.
+  * The application we drag-and-drop to now can select a format to get the data in
   * Many additional bug fixes and performance improvements.
 
 16.04:
